<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.markdb.SecondActivity">

    <Spinner
        android:id="@+id/spinnerBudgetMonth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:padding="4dp" />

    <Button
        android:id="@+id/btnNotify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerBudgetMonth"
        android:text="@string/notify_list"
        android:textAllCaps="false"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnInsert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert" />

    <TextView
        android:id="@+id/txtShowResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnShowAllData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_expenditure" />

</LinearLayout>
